@@ -1928,7 +1928,7 @@ public class NotificationHandlerConfiguration {
             .map(IdValue::getValue)
             .collect(Collectors.toList())).orElse(Collections.emptyList());
 
-        return caseBundles.isEmpty() ? "" : caseBundles.get(0).getStitchStatus().orElse("");
+        return caseBundles.isEmpty() ? "" : caseBundles.getFirst().getStitchStatus().orElse("");
     }
 
     @Bean
@@ -6174,10 +6174,14 @@ public class NotificationHandlerConfiguration {
             (callbackStage, callback) -> {
                 AsylumCase asylumCase = callback.getCaseDetails().getCaseData();
 
+                boolean isAppealPaid = asylumCase.read(PAYMENT_STATUS, PaymentStatus.class)
+                        .orElse(null) == PaymentStatus.PAID;
+
                 return callbackStage == PreSubmitCallbackStage.ABOUT_TO_SUBMIT
                     && callback.getEvent() == Event.RECORD_REMISSION_REMINDER
                     && isRemissionRejectedOrPartiallyApproved(asylumCase)
-                    && isAipJourney(asylumCase);
+                    && isAipJourney(asylumCase)
+                    && !isAppealPaid;
             },
             notificationGenerators,
             getErrorHandler()
@@ -8134,10 +8138,13 @@ public class NotificationHandlerConfiguration {
         return new NotificationHandler(
             (callbackStage, callback) -> {
                 AsylumCase asylumCase = callback.getCaseDetails().getCaseData();
+                boolean isAppealPaid = asylumCase.read(PAYMENT_STATUS, PaymentStatus.class)
+                        .orElse(null) == PaymentStatus.PAID;
 
                 return callbackStage == PreSubmitCallbackStage.ABOUT_TO_SUBMIT
                     && callback.getEvent() == Event.RECORD_REMISSION_REMINDER
-                    && isRemissionRejectedOrPartiallyApproved(asylumCase);
+                    && isRemissionRejectedOrPartiallyApproved(asylumCase)
+                    && !isAppealPaid;
             },
             notificationGenerators,
             getErrorHandler()
